fixed overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,12 +29,14 @@ header h1{
 .panel{
 	padding: 10px;
 	margin-top: 15px;
+	background: #efefef;
 	background: -moz-linear-gradient(top, #FFFFFF 0%, #F4F4F4 100%); 
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F4F4F4));
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F4F4F4',GradientType=0 );
 	box-shadow: 0px 2px 5px rgba(0,0,0,0.15);
 	-webkit-box-shadow: 0px 2px 5px rgba(0,0,0,0.15);
 	-moz-box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+	margin: 0 0 20px 0;
 }
 
 .panel p{
@@ -241,7 +243,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
 }
 
 #content{
-	overflow: hidden;
+	overflow: visible;
 	margin-top: 20px;
 	padding: 0 10px;
 	margin-bottom: 30px;
@@ -735,6 +737,7 @@ h2, h3 {
 #rightColumn{
 	width: 100%;
 	padding-left: 0;
+	overflow: hidden;
 }
 
 .panelContent{
